--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flame: '>=0.23.0 <1.0.0'
   audioplayers: ^0.15.1
+  synchronized: ^2.1.0
   flutter:
     sdk: flutter
 
