--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flame: '>=1.0.0-rc5 <2.0.0'
   audioplayers: ^0.17.1
-  synchronized: ^2.1.0
+  synchronized: ^2.2.0+2
   flutter:
     sdk: flutter
 
