--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: flame_audio
 description: Audio support for the Flame game engine. This containst all audio related code will live in the future, using the audioplayers package.
-version: 0.1.0-rc3
+version: 0.1.0-rc4
 homepage: https://github.com/flame-engine/flame_audio
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
-  flame: '>=1.0.0-rc5 <2.0.0'
+  flame: '>=1.0.0-rc6 <2.0.0'
   audioplayers: ^0.17.4
   synchronized: ^2.2.0+2
   flutter:
