--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 0.1.0-rc4
 homepage: https://github.com/flame-engine/flame_audio
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
-  flame: '>=1.0.0-rc6 <2.0.0'
-  audioplayers: ^0.17.4
-  synchronized: ^2.2.0+2
+  flame: '>=1.0.0-rc8'
+  audioplayers: ^0.18.0
+  synchronized: ^3.0.0
   flutter:
     sdk: flutter
 
